absolute path for home logo

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <body>
   	<div id='banner'>
   		<div>
-  			<img id='home-logo' style='height:32px;line-height: 3rem;display:inline-block;vertical-align: middle' src='public/mobius 32x32.png'>
+  			<img id='home-logo' style='height:32px;line-height: 3rem;display:inline-block;vertical-align: middle' src='https://github.com/comacros/comacros.github.io/blob/master/public/Mobius%2032x32.png?raw=true'>
   		</div>
   		<div><label>Image</label></div>
   		<div><label>JanJan-UI</label></div>
