update home content style

--- a/home.html
+++ b/home.html
@@ -24,8 +24,9 @@
 
 
   	</div>
-  	<div style='margin-top:3rem;height:calc(100vh - 3rem);display:flex;align-items:center;'>
-  		<label style='margin-left:50%;transform:translateX(-50%)'>“不经意的相识，特意的相伴”</label>
+  	<div style='margin-top:9rem;font-size:200%'>
+  		<div style='text-align:center'>不经意的相识</div>
+  		<div style='text-align:center'>特意的相伴</div>
   	</div>
   </body>
 </html>
