--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
   		<div><label>Image</label></div>
   		<div><label>JanJan-UI</label></div>
   		<div><label>Blog</label></div>
-  		<div><label>Origin</label></div>
+  		<div><label onclick='location.href="Origin/OpenFileOnLaunchingXFunction.html"'>Origin</label></div>
   		<div><label>About</label></div>
 
 
